add search filter
